@@ -8,6 +8,24 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/Commons-Upload/commons-fileupload-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/Commons-Upload/commons-io-1.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derby.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyclient.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyLocale_cs.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyLocale_de_DE.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyLocale_es.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyLocale_fr.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyLocale_hu.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyLocale_it.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyLocale_ja_JP.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyLocale_ko_KR.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyLocale_pl.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyLocale_pt_BR.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyLocale_ru.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyLocale_zh_CN.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyLocale_zh_TW.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbynet.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbyrun.jar"/>
+	<classpathentry kind="lib" path="lib/Derby/derbytools.jar"/>
 	<classpathentry kind="lib" path="lib/JENA/antlr-2.7.5.jar"/>
 	<classpathentry kind="lib" path="lib/JENA/arq.jar"/>
 	<classpathentry kind="lib" path="lib/JENA/arq-extra.jar"/>
@@ -32,24 +50,6 @@
 	<classpathentry kind="lib" path="lib/Jetty/jsp-2.1.jar"/>
 	<classpathentry kind="lib" path="lib/Jetty/jsp-api-2.1.jar"/>
 	<classpathentry kind="lib" path="lib/Jetty/servlet-api-2.5-6.1.5.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derby.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyclient.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyLocale_cs.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyLocale_de_DE.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyLocale_es.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyLocale_fr.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyLocale_hu.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyLocale_it.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyLocale_ja_JP.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyLocale_ko_KR.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyLocale_pl.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyLocale_pt_BR.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyLocale_ru.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyLocale_zh_CN.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyLocale_zh_TW.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbynet.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbyrun.jar"/>
-	<classpathentry kind="lib" path="lib/Derby/derbytools.jar"/>
 	<classpathentry kind="lib" path="lib/Jython-2.2.1/jython.jar"/>
 	<classpathentry kind="lib" path="lib/XStream/cglib-nodep-2.1_3.jar"/>
 	<classpathentry kind="lib" path="lib/XStream/dom4j-1.6.1.jar"/>
