@@ -5,6 +5,8 @@ import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.concurrent.Semaphore;
 import java.util.logging.Logger;
 
+import com.thoughtworks.xstream.XStream;
+
 /** This class is the one in charge of keeping track of what is going on/happen during
  * the execution of a flow. It performs logging/provenance based on the provided interface
  * implementation provide during the construction of MrProbe.
@@ -40,6 +42,9 @@ extends Thread {
 
 	/** Should the state be serialized? */
 	private boolean bStateSerialization = false;
+	
+	/** The XStream serialization object */
+	private XStream xstream = null;
 
 	/** Initialize MrProper.
 	 * 
@@ -56,6 +61,7 @@ extends Thread {
 		this.bStateSerialization = bStateSerialization;
 		this.semWorkAvailable = new Semaphore(1,true);
 		this.clqStatements = new ConcurrentLinkedQueue<Object[]>();
+		this.xstream = new XStream();
 		
 		try {
 			this.semWorkAvailable.acquire();
@@ -129,14 +135,14 @@ extends Thread {
 	 * 
 	 * @param wc The wrapped component
 	 */
-	public void probeInitializeWrappedComponent ( WrappedComponent wc ) {
-		WrappedComponent wcc = wc;
+	public void probeWrappedComponentInitialize ( WrappedComponent wc ) {
+		Object oSWCXML = wc;
 		
 		// Check for state serialization
 		if ( bStateSerialization ) 
-			wcc = serializeState(wc);
+			oSWCXML = serializeObject(wc);
 		
-		Object[] oa = {Probe.ProbeCommands.EXECUTABLE_COMPONENT_INITIALIZED,wc.getExecutableComponentInstanceID(),wcc,new Date()};
+		Object[] oa = {Probe.ProbeCommands.EXECUTABLE_COMPONENT_INITIALIZED,wc.getExecutableComponentInstanceID(),oSWCXML,new Date()};
 		clqStatements.add(oa);
 		semWorkAvailable.release();
 	}
@@ -145,14 +151,60 @@ extends Thread {
 	 * 
 	 * @param wc The wrapped component
 	 */
-	public void probeDisposeWrappedComponent ( WrappedComponent wc ) {
-		WrappedComponent wcc = wc;
+	public void probeWrappedComponentDispose ( WrappedComponent wc ) {
+		Object oSWCXML = wc;
 		
 		// Check for state serialization
 		if ( bStateSerialization ) 
-			wcc = serializeState(wc);
+			oSWCXML = serializeObject(wc);
 		
-		Object[] oa = {Probe.ProbeCommands.EXECUTABLE_COMPONENT_DISPOSED,wc.getExecutableComponentInstanceID(),wcc,new Date()};
+		Object[] oa = {Probe.ProbeCommands.EXECUTABLE_COMPONENT_DISPOSED,wc.getExecutableComponentInstanceID(),oSWCXML,new Date()};
+		clqStatements.add(oa);
+		semWorkAvailable.release();
+	}
+	
+	/** The wrapped component pushed some data.
+	 * 
+	 * @param wc The wrapped component
+	 * @param sPortName The port name
+	 * @param objData The pushed data
+	 */
+	public void probeWrappedComponentPushData ( WrappedComponent wc, String sPortName, Object objData ) {
+		Object oSWCXML = wc;
+		Object oSDataXML = objData;
+		
+		// Check for state serialization
+		if ( bStateSerialization ) 
+			oSWCXML = serializeObject(wc);
+		
+		// Check for data serialization
+		if ( bDataSerialization )
+			oSDataXML = serializeObject(objData);
+		
+		Object[] oa = {Probe.ProbeCommands.EXECUTABLE_COMPONENT_PUSH_DATA,wc.getExecutableComponentInstanceID(),oSWCXML,oSDataXML,new Date()};
+		clqStatements.add(oa);
+		semWorkAvailable.release();
+	}
+	
+	/** The wrapped component poll some data.
+	 * 
+	 * @param wc The wrapped component
+	 * @param sPortName The port name
+	 * @param objData The pushed data
+	 */
+	public void probeWrappedComponentPullData ( WrappedComponent wc, String sPortName, Object objData ) {
+		Object oSWCXML = wc;
+		Object oSDataXML = objData;
+		
+		// Check for state serialization
+		if ( bStateSerialization ) 
+			oSWCXML = serializeObject(wc);
+		
+		// Check for data serialization
+		if ( bDataSerialization )
+			oSDataXML = serializeObject(objData);
+		
+		Object[] oa = {Probe.ProbeCommands.EXECUTABLE_COMPONENT_PULL_DATA,wc.getExecutableComponentInstanceID(),oSWCXML,oSDataXML,new Date()};
 		clqStatements.add(oa);
 		semWorkAvailable.release();
 	}
@@ -160,12 +212,10 @@ extends Thread {
 	/** The executable component gets serialize to keep its state.
 	 * 
 	 * @param wc The Wrapped component to serialize
-	 * @return The serialized object
+	 * @return The XML serialized object
 	 */
-	protected WrappedComponent serializeState ( WrappedComponent wc ) {
-		log.warning("State serialization not implemented. State serialization discarded");
-		// TODO: Implement the state serialization
-		return (WrappedComponent) wc;
+	protected String serializeObject ( Object obj ) {
+		return xstream.toXML(obj);
 	}
 
 	/** Processes the probe command calling to the proper probe call on the 
@@ -189,6 +239,12 @@ extends Thread {
 				break;
 			case EXECUTABLE_COMPONENT_DISPOSED:
 				probe.probeExecutableComponentDisposed((String)oa[1],oa[2],(Date)oa[3]);
+				break;
+			case EXECUTABLE_COMPONENT_PUSH_DATA:
+				probe.probeExecutableComponentPushData((String)oa[1],oa[2],oa[3],(Date)oa[4]);
+				break;
+			case EXECUTABLE_COMPONENT_PULL_DATA:
+				probe.probeExecutableComponentPullData((String)oa[1],oa[2],oa[3],(Date)oa[4]);
 				break;
 			default:
 				log.warning("Unknown probe command "+oa[0]);
